--- a/PlantVsZombies/.classpath
+++ b/PlantVsZombies/.classpath
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/javafx-jre-17">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/javafx-jre-17">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/vivianagmorales/Documents/Programming_Assignments/Environment/javafx-sdk-17.0.9/lib/javafx.controls.jar">
+	<classpathentry kind="lib" path="/Users/vivianagmorales/Documents/Programming_Assignments/Environment/javafx-sdk-17.0.9/lib/javafx.base.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/vivianagmorales/Documents/Programming_Assignments/Environment/javafx-sdk-17.0.9/lib/javafx.graphics.jar">
+	<classpathentry kind="lib" path="/Users/vivianagmorales/Documents/Programming_Assignments/Environment/javafx-sdk-17.0.9/lib/javafx.controls.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -21,16 +21,15 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/vivianagmorales/Documents/Programming_Assignments/Environment/javafx-sdk-17.0.9/lib/javafx.graphics.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/Users/vivianagmorales/Documents/Programming_Assignments/Environment/javafx-sdk-17.0.9/lib/javafx.media.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/vivianagmorales/Documents/Programming_Assignments/Environment/javafx-sdk-17.0.9/lib/javafx.base.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
